--- a/File_Manager/File_Manager.csproj
+++ b/File_Manager/File_Manager.csproj
@@ -5,4 +5,12 @@
         <TargetFramework>netcoreapp3.1</TargetFramework>
     </PropertyGroup>
 
+    <ItemGroup>
+      <EmbeddedResource Remove="Options.resx" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <Compile Remove="Options.Designer.cs" />
+    </ItemGroup>
+
 </Project>
